<resources>
    <string name="app_name">FirstProgram</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="DefinitionsInGame">Definitions\n\nCard Copies: How many desired cards are in your
        deck at the moment?\n\nNumber of Cards Left: How many cards are left in your deck?\n\nCurrent
        Turn: What turn are you on?\n\nInHow Many Turns: What turn do you want to pick the card by?
    </string>
    <string name="Welcome">Welcome to my first program, where it calculates the probability of
        drawing a certain card within your card game.\\nPlease select whether or not you are in the
        game already or if you are not in the game.</string>
    <string name="DefinitionsNewGame">Definitions\n\nCard Copies: How many desired cards are in your
        deck at the moment?\n\nDeck Size: How many cards are in your deck?\n\nMulligan: How many cards
        are you going to mulligan?\n\nInitial Hand Size: How many cards do you draw at the beginning?
        \n\nIn How Many Turns: What turn do you want to pick the card by?</string>
    <string name="CardCopies">Card Copies</string>
    <string name="NumberOfCardsLeft">Number of Cards Left</string>
    <string name="InHowManyTurns">In How Many Turns?</string>
    <string name="CurrentTurn">Current Turn</string>
    <string name="Submit">Submit</string>
    <string name="DeckSize">Deck Size</string>
    <string name="Mulligan">Cards Mulliganned</string>
    <string name="HandSize">Initial Hand Size</string>
</resources>
